# ist-P3D

./: .gitignore  CMakeLists.txt  Makefile  README.md  main  main.cpp
Assets/: Camera.cpp  Color.cpp  Color.h  Light.h  Plane.cpp  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Ray.cpp  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h
Assignment1/: Camera.cpp  Camera.h  Cylinder.cpp  Cylinder.h  Light.cpp  Light.h  Makefile  Material.cpp  Material.h  Sphere.h  main  main.cpp
Assignment1/Assets/: Camera.cpp  Camera.h  Color.cpp  Color.h  Light.cpp  Light.h  Material.cpp  Material.h  Plane.cpp  Plane.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h
Assignment2/: Makefile  dof_test.nff  main  main.cpp
Assignment2/Assets/: BoundingBox.cpp  BoundingBox.h  Camera.h  Color.cpp  Color.h  Cylinder.h  Grid.cpp  Grid.h  LensCamera.cpp  LensCamera.h  Light.cpp  Light.h  LightArea.cpp  LightArea.h  Material.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Point.h  Polygon.cpp  Polygon.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h
Assignment3/P3D/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  P3D.sln
Assignment3/P3D/Assets/: New Terrain.asset  NewLayer.terrainlayer  Test Normal Mapped.mat
Assignment3/P3D/ProjectSettings/: ProjectSettings.asset
Assignment3/P3D/Temp/: UnityTempFile-0934d178a755c4deaa8b5c95ac09ce0f  UnityTempFile-116f2c2af7a3d44b0a39e56f70d10a3e  UnityTempFile-131de360e4a0a43f5858192b61a3b068  UnityTempFile-190ba66b630da406da686716bd7ddec8  UnityTempFile-1def7bfcab0f54c0bb2a2871110668e9  UnityTempFile-271379a84f3824f55b4e1ecac7aab48a  UnityTempFile-28d938f4e2d494086ba103fe10bf9e2d  UnityTempFile-32505c7a1be5c48dfacd5e6cd3f81758  UnityTempFile-4bbf7643734884afea208919933a0258  UnityTempFile-4f51e198ed13149eaac02231e4003a9a  UnityTempFile-5fcd79aba92684d2bbdaa133a5198376  UnityTempFile-61e9912f752684376825243762f725a2  UnityTempFile-7423ec48c8a29428bb032664431ec82c  UnityTempFile-83668729bbee442399adb4e83d97bf03  UnityTempFile-8d04838b01947455ea20f096ccf6eec0  UnityTempFile-8d560ae9a0cd44558b6562268e49cf80  UnityTempFile-934912de46ae94082bf6d457dc30b7d1  UnityTempFile-94d68253a4a1d45879b2a69d42390969  UnityTempFile-9cf51d3afa5f7496e9065d5239175828  UnityTempFile-a1c5c17c2aa624314868213fe683fb91  UnityTempFile-a5acee230513546f6ab2761ed7e33aee  (+6 more)
(+46 files in other folders)
